--- a/index.html
+++ b/index.html
@@ -18,6 +18,68 @@
     <script src="js/OrbitControls.js"></script>
     <script>
 
+        var scene = new THREE.Scene();
+        var camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        var renderer = new THREE.WebGLRenderer();
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        document.body.appendChild( renderer.domElement);
+
+
+        window.addEventListener('resize', onWindowResize);
+        function onWindowResize(){
+
+            camera.aspect = window.innerWidth / window.innerHeight
+            camera.updateProjectionMatrix();
+            renderer.setSize( window.innerWidth, window.innerHeight);
+        };
+
+
+        var controls = new THREE.OrbitControls( camera, renderer.domElement );
+
+
+
+        var geometry = new THREE.CylinderGeometry( 5, 5, 20, 40);
+
+        var material = new THREE.MeshBasicMaterial({ color: "#FF9F82", wireframe: true});
+
+        var cylinder = new THREE.Mesh( geometry, material);
+
+        scene.add( cylinder);
+
+        camera.position.z = 25;
+
+
+        var update = function() {
+
+
+            // cylinder.rotation.x += 0.01;
+            // cylinder.rotation.y += 0.008;
+            // cylinder.rotation.z += 0.01;
+
+
+        }
+
+        var render = function() {
+
+            renderer.render( scene, camera);
+
+        }
+
+        var loop = function() {
+
+            requestAnimationFrame(loop);
+
+            update();
+            render();
+
+
+        };
+
+        loop();
+
+
+
+
     </script>
     
 </body>
